# Nucleation

./: .fingerprint-mem-report.md  .gitignore  .wol-pack-report.md  Cargo.toml  LICENSE  README-npm.md  README-python.md  README.md  RELEASE_NOTES.md  WARP.md  api_upgrade.md  bench_python.py  build-wasm.sh  build.rs  diff_report.md  docker-compose.store-test.yml  fingerprint_report.md  java-library-todo.md  mcstructure-accuracy-todo.md  nucleation-stubs.php  nucleation.h  nucleation.pyi  pre-push.sh  pyproject.toml  render_example.py  rotation_anim.py  simple_cube.litematic  stone_cube  stone_cube.schematic  test_cli_output.litematic  test_count_format.schem  test_schematic.schem
.bench-baselines/: history.json
benches/: bench_python.py  block_placement.rs  fingerprint_bench.rs  performance_test.rs  region_bench.rs  schematic_bench.rs  scripting_bench.rs  snapshot_bench.rs
bindings/: diplomat.config.mjs
bindings/python/: CMakeLists.txt  README.md  pyproject.toml
bindings/python/custom/: schematic_compat.hpp
bindings/python/src/: nucleation_ext.cpp
bindings/python/src/include/: AnimationEffect.d.hpp  AnimationEffect.hpp  Autostack.d.hpp  Autostack.hpp  BlockPos.d.hpp  BlockPos.hpp  BlockState.d.hpp  BlockState.hpp  Blocks.d.hpp  Blocks.hpp  Brush.d.hpp  Brush.hpp  BuildAnimation.d.hpp  BuildAnimation.hpp  BuildingTool.d.hpp  BuildingTool.hpp  ChunkMeshResult.d.hpp  ChunkMeshResult.hpp  CircuitBuilder.d.hpp  CircuitBuilder.hpp  Curve3D.d.hpp  Curve3D.hpp  DefinitionRegion.d.hpp  DefinitionRegion.hpp  Diff.d.hpp  Diff.hpp  Dimensions.d.hpp  Dimensions.hpp  DistanceField.d.hpp  DistanceField.hpp  ExecutionMode.d.hpp  ExecutionMode.hpp  Fingerprint.d.hpp  Fingerprint.hpp  Geo.d.hpp  Geo.hpp  InterpolationSpace.d.hpp  InterpolationSpace.hpp  IoLayout.d.hpp  IoLayout.hpp  (+100 more)
bindings/python/src/sub_modules/nucleation/: AnimationEffect_binding.cpp  Autostack_binding.cpp  BlockPos_binding.cpp  BlockState_binding.cpp  Blocks_binding.cpp  Brush_binding.cpp  BuildAnimation_binding.cpp  BuildingTool_binding.cpp  ChunkMeshResult_binding.cpp  CircuitBuilder_binding.cpp  Curve3D_binding.cpp  DefinitionRegion_binding.cpp  Diff_binding.cpp  Dimensions_binding.cpp  DistanceField_binding.cpp  ExecutionMode_binding.cpp  Fingerprint_binding.cpp  Geo_binding.cpp  InterpolationSpace_binding.cpp  IoLayoutBuilder_binding.cpp  IoLayout_binding.cpp  IoType_binding.cpp  ItemModelConfig_binding.cpp  ItemModelPackBuilder_binding.cpp  ItemModelResult_binding.cpp  ItemScale_binding.cpp  LayoutFunction_binding.cpp  MchprsWorld_binding.cpp  MeshBounds_binding.cpp  MeshConfig_binding.cpp  MeshJob_binding.cpp  MeshPhase_binding.cpp  MeshProgress_binding.cpp  MeshResult_binding.cpp  MultiMeshResult_binding.cpp  Nbt_binding.cpp  NucleationError_binding.cpp  OutputCondition_binding.cpp  PaletteBuilder_binding.cpp  Palette_binding.cpp  (+29 more)
docs/: README.md  animation-video-api.md  api-reference-ffi.md  api-reference-python.md  api-reference-wasm.md  autostack-design.tex  autostack.md  compiled-circuit-integration-note.md  fork-surface.md  gallery.md  meshing-nucm-rendering.md  schematic-renderer-integration.md
examples/: airship_fortress.rs  bench_mesh_timing.rs  bracket_notation.rs  build_adder.rs  build_test_adder.rs  building_benchmark.rs  compare_formats.rs  connect4_battle_setup.rs  convert_world.rs  diff_demo.rs  diff_fingerprint.py  entity_bbox_test.rs  entity_id_schem_test.rs  entity_mesh_test.rs  entity_schem_verify.rs  ffi.md  fingerprint_dedup.rs  fingerprint_mem.rs  gen_test_nucm.rs  generate_solid_color_tests.rs  inspect_blockpedia.rs  inspect_world.rs  item_model_test.rs  load_classic_schematic.rs  multi_item_model.rs  nucleation.lua  nucm_size_test.rs  python.md  quick_mesh_test.rs  readme_assemble.rs  readme_setblock.rs  render_animation.rs  render_animation_operations.rs  render_schematic.rs  render_smoke.rs  render_trefoil.rs  rust.md  stone_cube.c  stone_cube.lua  stone_cube.schem  (+5 more)
examples/haskell/: demo.litematic  nucleation-example.cabal
examples/haskell/app/: Main.hs
examples/haskell/cbits/: nucleation_shim.c
examples/haskell/src/: Nucleation.hs
js/: nucleation-api.mjs
nucleation-jvm/: Cargo.toml  README.md  build-cross.sh
nucleation-jvm/jvm/: build.gradle.kts  gradle.properties  settings.gradle.kts
nucleation-jvm/jvm/src/main/java/com/github/schemat/nucleation/: Block.java  BlockState.java  Brush.java  BuildingTool.java  CircuitBuilder.java  DefinitionRegion.java  Diff.java  Dimensions.java  IoType.java  ItemModelConfig.java  ItemModelResult.java  LayoutFunction.java  MchprsWorld.java  MeshConfig.java  MeshResult.java  MultiMeshResult.java  NativeLoader.java  Nucleation.java  NucleationNative.java  RedstoneGraph.java  ResourcePack.java  Schematic.java  SchematicBuilder.java  Sdf.java  SdfRules.java  Shape.java  StateMode.java  TypedCircuitExecutor.java  Value.java
nucleation-jvm/jvm/src/main/java/com/github/schemat/nucleation/exceptions/: InvalidBlockStateException.java  NucleationException.java  SchematicParseException.java  UnsupportedFeatureException.java
nucleation-jvm/jvm/src/test/java/com/github/schemat/nucleation/: BlockEntityInsignTest.java  BlockStateTest.java  CircuitExecutorTest.java  MchprsWorldTest.java  MeshingTest.java  NucleationTest.java  RedstoneGraphTest.java  SchematicBuilderTest.java  SchematicTest.java  SdfTest.java  ShapeTest.java
nucleation-jvm/src/: conv.rs  errors.rs  handles.rs  lib.rs
nucleation-jvm/src/exports/: blockstate.rs  builder.rs  buildingtool.rs  circuit.rs  diff.rs  fingerprint.rs  graph.rs  itemmodel.rs  meshing.rs  mod.rs  nucleation.rs  schematic.rs  sdf.rs  shape.rs  simulation.rs
output/: full_adder.litematic
src/: block_entity_store.rs  block_position.rs  block_state.rs  bounding_box.rs  definition_region.rs  entity.rs  ffi.rs  geo.rs  insign.rs  lib.rs  metadata.rs  php.rs  print_utils.rs  python.rs  region.rs  schematic_builder.rs  store_io.rs  transforms.rs  universal_schematic.rs  wasm.rs
tests/: animation_regions_test.rs  autostack_test.rs  barrel_nbt_test.rs  bedrock_conversion_tests.rs  blockpedia_data_gaps.rs  (+65 more)
(+1151 files in other folders)
