[package]
name = "nucleation-jvm"
version = "0.2.16"
edition = "2021"
description = "JNI bindings for the Nucleation Minecraft schematic library"
authors = ["Nano <nano@schem.at>"]
license = "MIT"
repository = "https://github.com/Schem-at/Nucleation"

[lib]
name = "nucleation_jvm"
crate-type = ["cdylib"]

[features]
default = ["meshing", "simulation"]
simulation = ["nucleation/simulation"]
meshing = ["nucleation/meshing"]
# Store-backed open()/save() support local paths and `file://` out of the box
# (the core's default `store-fs` feature). Enable `store-s3` to additionally
# resolve `s3://bucket/key.schem` URIs — pulls in aws-sdk-s3 + tokio.
store-s3 = ["nucleation/store-s3"]

[dependencies]
nucleation = { path = ".." }
quartz_nbt = { version = "0.2.9", features = ["preserve_order"] }
jni = "0.21"
serde_json = "1.0"

# Patch must be replicated here because path-dependency parents do not
# share patches with their dependents.
[patch.crates-io]
hematite-nbt = { git = "https://github.com/StackDoubleFlow/hematite_nbt" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
